fix: small horizonal overflow
Fix the samll horizonal overflow caused by adding 100vw to navbar & body

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 #navbar {
-    width: 100vw;
+    /* width: 100vw; */
     font-size: 1.4rem;
     
     padding: 1em 0;
