--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,9 @@
   margin: 0;
 }
 
-body {
+/* body {
   width: 100vw;
-}
+} */
 
 a {
   font-weight: 500;
